# clang-plugin-template

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindClang.cmake
lib/: AstExporter.cpp  CMakeLists.txt  PrintFunction.cpp
lib/CastMatcher/: CMakeLists.txt  castmatch.cpp
lib/MainCallChecker/: CMakeLists.txt  MainCallChecker.cpp
lib/PrintFunction/: CMakeLists.txt  PrintFunction.cpp
lib/SimpleStreamChecker/: CMakeLists.txt  SimpleStreamChecker.cpp
lib/StreamChecker/: CMakeLists.txt  StreamChecker.cpp
test/: CMakeLists.txt  functions.c  is_cast.c  is_not_cast.c  maincall.c
